wallet in header spacing fix

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -84,6 +84,7 @@
   background-color: #31364b;
   color: #878ca4;
   padding: 10px 16px;
+  margin: 0 16px;
   display: flex !important;
   align-items: center !important;
   border-radius: 25px !important;
